--- a/WebApplication1/WebApplication1 - Copy/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1 - Copy/WebApplication1/WebApplication1.csproj
@@ -112,12 +112,16 @@
     <Content Include="appframework\send.jpg" />
     <Content Include="appframework\Sendbtn.jpg" />
     <Content Include="appframework\Sendbtn1.jpg" />
+    <Content Include="bhabo.html" />
+    <Content Include="BhaboApp.js" />
     <Content Include="chatroom.aspx" />
+    <Content Include="css\bhabo.css" />
     <Content Include="css\custom.css" />
     <Content Include="css\customres.css" />
     <Content Include="css\index.css" />
     <Content Include="css\jquery.mobile-1.0.1.css" />
     <Content Include="css\jquery.mobile.structure-1.0.1.css" />
+    <Content Include="img\WZ9Od.gif" />
     <Content Include="RoomsApp.js" />
     <Content Include="Global.asax" />
     <Content Include="Index.html" />
@@ -128,11 +132,15 @@
     <None Include="Scripts\jquery-1.6.4-vsdoc.js" />
     <Content Include="room.html" />
     <Content Include="rooms.html" />
+    <Content Include="Scripts\bhabo.js" />
     <Content Include="Scripts\cordova.js" />
     <Content Include="Scripts\CustomFunctions.js" />
     <Content Include="Scripts\Database.js" />
+    <Content Include="Scripts\GameHub.js" />
     <Content Include="Scripts\handlebars-v2.0.0.js" />
     <Content Include="Scripts\index.js" />
+    <Content Include="Scripts\interact-1.2.2.js" />
+    <Content Include="Scripts\interact-1.2.2.min.js" />
     <Content Include="Scripts\jquery-1.6.4.js" />
     <Content Include="Scripts\jquery-1.6.4.min.js" />
     <Content Include="Scripts\jquery.signalR-2.1.2.js" />
