--- a/WebApplication1/WebApplication1 - Copy/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1 - Copy/WebApplication1/WebApplication1.csproj
@@ -146,6 +146,7 @@
     <Content Include="Scripts\index.js" />
     <Content Include="Scripts\interact-1.2.2.js" />
     <Content Include="Scripts\interact-1.2.2.min.js" />
+    <Content Include="Scripts\iscroll.js" />
     <Content Include="Scripts\jq.appframework.js" />
     <Content Include="Scripts\jquery-1.6.4.js" />
     <Content Include="Scripts\jquery-1.6.4.min.js" />
