--- a/WebApplication1/WebApplication1 - Copy/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1 - Copy/WebApplication1/WebApplication1.csproj
@@ -116,6 +116,7 @@
     <Content Include="BhaboApp.js" />
     <Content Include="chatroom.aspx" />
     <Content Include="css\bhabo.css" />
+    <Content Include="css\cards.css" />
     <Content Include="css\custom.css" />
     <Content Include="css\customres.css" />
     <Content Include="css\icons.css" />
@@ -141,6 +142,7 @@
     <Content Include="Scripts\cordova.js" />
     <Content Include="Scripts\CustomFunctions.js" />
     <Content Include="Scripts\Database.js" />
+    <Content Include="Scripts\fastclick.js" />
     <Content Include="Scripts\GameHub.js" />
     <Content Include="Scripts\handlebars-v2.0.0.js" />
     <Content Include="Scripts\index.js" />
