--- a/WebApplication1/WebApplication1 - Copy/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1 - Copy/WebApplication1/WebApplication1.csproj
@@ -156,6 +156,7 @@
     <Content Include="Scripts\jquery.mobile-1.4.5.min.js" />
     <Content Include="Scripts\jquery.signalR-2.1.2.js" />
     <Content Include="Scripts\jquery.signalR-2.1.2.min.js" />
+    <Content Include="Scripts\jquery.timer.js" />
     <Content Include="Scripts\require.js" />
     <Content Include="Scripts\room.js" />
     <Content Include="Scripts\rooms.js" />
